[gd_scene load_steps=6 format=3 uid="uid://cj8ilswgtmol3"]

[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="1_v2koq"]
[ext_resource type="Script" uid="uid://ccox1qm5s377n" path="res://discard_filter.gd" id="2_7w41q"]
[ext_resource type="PackedScene" uid="uid://c77w5pwarx82n" path="res://Graphic Elements/Tooltips/tooltip_trigger.tscn" id="2_fl3of"]
[ext_resource type="Script" uid="uid://c2ygpa8urfv7k" path="res://filter.gd" id="4_6jkyr"]
[ext_resource type="Theme" uid="uid://blwnh8rwgc0eh" path="res://Graphic Elements/Themes/mainTab.tres" id="4_fwgud"]

[node name="DiscardFilter" type="VBoxContainer"]
offset_right = 1400.0
offset_bottom = 199.0
theme = ExtResource("1_v2koq")
theme_override_constants/separation = 8
script = ExtResource("2_7w41q")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("4_fwgud")

[node name="DirectDowngrades" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2
theme = ExtResource("1_v2koq")
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2/DirectDowngrades"]
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "Auto-discard "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer2/DirectDowngrades"]
layout_mode = 2
bbcode_enabled = true
text = "[color=#baa1e6]direct downgrades[/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TooltipTrigger" parent="PanelContainer2/DirectDowngrades/RichTextLabel2" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "Direct downgrade"
tooltipText = "A piece of equipment is a direct downgrade if all of its stats are worse than those of another item of the same slot and it has the same elements."

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/DirectDowngrades"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 35
alignment = 2

[node name="Option" type="HBoxContainer" parent="PanelContainer2/DirectDowngrades/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option"]
layout_mode = 2
bbcode_enabled = true
text = " [color=#baa1e6]From combat rewards[/color] "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "From combat rewards"
tooltipText = "When equipment is dropped by an enemy, it will be auto-discarded if it is a direct downgrade of an item you already own."

[node name="Option2" type="HBoxContainer" parent="PanelContainer2/DirectDowngrades/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option2"]
layout_mode = 2
bbcode_enabled = true
text = " [color=#baa1e6]From inventory[/color] "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option2/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "From inventory"
tooltipText = "When equipment is dropped by an enemy, all direct downgrades of that item will be discarded, unless equipped. If any are discarded, the new item is auto-taken."

[node name="Option3" type="HBoxContainer" parent="PanelContainer2/DirectDowngrades/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option3"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option3"]
layout_mode = 2
bbcode_enabled = true
text = " [color=#baa1e6]From equipped items[/color] "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer2/DirectDowngrades/HBoxContainer/Option3/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "From equipped items"
tooltipText = "When equipment is dropped by an enemy, if it is a direct upgrade of a currently equipped item, it will be auto-equipped and the old item will be discarded."

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("4_fwgud")

[node name="DirectDowngrades" type="HBoxContainer" parent="PanelContainer3"]
layout_mode = 2
theme = ExtResource("1_v2koq")
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer3/DirectDowngrades"]
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "Follow above setting even if item is: "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer3/DirectDowngrades"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 35
alignment = 2

[node name="Option" type="HBoxContainer" parent="PanelContainer3/DirectDowngrades/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer3/DirectDowngrades/HBoxContainer/Option"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer3/DirectDowngrades/HBoxContainer/Option"]
layout_mode = 2
bbcode_enabled = true
text = " Legendary "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option2" type="HBoxContainer" parent="PanelContainer3/DirectDowngrades/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer3/DirectDowngrades/HBoxContainer/Option2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer3/DirectDowngrades/HBoxContainer/Option2"]
layout_mode = 2
bbcode_enabled = true
text = " Signature "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("4_fwgud")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_v2koq")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#baa1e6]Auto-discard filter[/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer/VBoxContainer/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "Auto-discard filter"
tooltipText = "Defines the conditions under which a dropped item is auto-discarded. Applies before direct downgrades are considered."

[node name="Filter" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 7
script = ExtResource("4_6jkyr")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3
text = " Filter Type          "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option14" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option14"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option14"]
layout_mode = 2
bbcode_enabled = true
text = " [color=#baa1e6]Whitelist[/color] "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer/VBoxContainer/Filter/Option14/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "Whitelist"
tooltipText = "Equipment will be auto-discarded unless it is in at least 1 category from each row."

[node name="Option15" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option15"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option15"]
layout_mode = 2
bbcode_enabled = true
text = " [color=#baa1e6]Blacklist[/color] "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TooltipTrigger" parent="PanelContainer/VBoxContainer/Filter/Option15/RichTextLabel" instance=ExtResource("2_fl3of")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tooltipTitle = "Blacklist"
tooltipText = "Equipment will be auto-discarded if is in any of the categories below."

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control7" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control8" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control9" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control10" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Option12" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option12"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option12"]
layout_mode = 2
bbcode_enabled = true
text = " All "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option13" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option13"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option13"]
layout_mode = 2
bbcode_enabled = true
text = " None "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3
text = " Element"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option"]
layout_mode = 2
bbcode_enabled = true
text = " Earth "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option2"]
layout_mode = 2
bbcode_enabled = true
text = " Fire "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option3"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option3"]
layout_mode = 2
bbcode_enabled = true
text = " Ice "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option4"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option4"]
layout_mode = 2
bbcode_enabled = true
text = " Water "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option5" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option5"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option5"]
layout_mode = 2
bbcode_enabled = true
text = " Nonelemental "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="RichTextLabel3" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3
text = " Rarity "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option6" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option6"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option6"]
layout_mode = 2
bbcode_enabled = true
text = " Common "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option7" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option7"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option7"]
layout_mode = 2
bbcode_enabled = true
text = " Uncommon "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option8" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option8"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option8"]
layout_mode = 2
bbcode_enabled = true
text = " Rare "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option9" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option9"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option9"]
layout_mode = 2
bbcode_enabled = true
text = " Epic "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option10" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option10"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option10"]
layout_mode = 2
bbcode_enabled = true
text = " Legendary "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option11" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option11"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option11"]
layout_mode = 2
bbcode_enabled = true
text = " Signature "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
text = " Equipment Type     "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Option16" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option16"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option16"]
layout_mode = 2
bbcode_enabled = true
text = " Weapon "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option17" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option17"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option17"]
layout_mode = 2
bbcode_enabled = true
text = " Armor "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option18" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option18"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option18"]
layout_mode = 2
bbcode_enabled = true
text = " Accessory "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Control11" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control13" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Control14" type="Control" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="RichTextLabel5" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3
text = " Weapon Type"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option19" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option19"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option19"]
layout_mode = 2
bbcode_enabled = true
text = " Melee "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Option20" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Filter/Option20"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Filter/Option20"]
layout_mode = 2
bbcode_enabled = true
text = " Ranged "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[connection signal="toggled" from="PanelContainer/VBoxContainer/Filter/Option14/CheckBox" to="PanelContainer/VBoxContainer/Filter" method="option14"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Filter/Option15/CheckBox" to="PanelContainer/VBoxContainer/Filter" method="option15"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Filter/Option12/CheckBox" to="PanelContainer/VBoxContainer/Filter" method="option12"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Filter/Option13/CheckBox" to="PanelContainer/VBoxContainer/Filter" method="option13"]
